--- a/index.html
+++ b/index.html
@@ -68,46 +68,126 @@
                 <div class="container">
                     <div class="row d-flex justify-content-center">
                         <div class="col d-flex justify-content-center mt-4">
-                            <div class="card" style="width: 27rem;">
-                                <img src="./image/couvePrato.png" class="card-img-top" alt="...">
-                                <div class="card-body cardhover">
-                                    <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                            <a href="./Projects/projeto_arroz.html">
+                                <div class="card" style="width: 25rem;">
+                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <div class="card-body cardhover">
+                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                    </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="col d-flex justify-content-center mt-4">
-                            <div class="card" style="width: 27rem;">
-                                <img src="./image/couvePrato.png" class="card-img-top" alt="...">
-                                <div class="card-body cardhover">
-                                    <p class="card-text cardhover">couve flor parmegiana</p>
+                            <a href="./Projects/projeto_arroz.html">
+                                <div class="card" style="width: 25rem;">
+                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <div class="card-body cardhover">
+                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                    </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="col d-flex justify-content-center mt-4">
-                            <div class="card" style="width: 27rem;">
-                                <img src="./image/couvePrato.png" class="card-img-top" alt="...">
-                                <div class="card-body cardhover">
-                                    <p class="card-text cardhover">couve flor parmegiana</p>
+                            <a href="./Projects/projeto_arroz.html">
+                                <div class="card" style="width: 25rem;">
+                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <div class="card-body cardhover">
+                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                    </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="col d-flex justify-content-center mt-4">
-                            <div class="card" style="width: 27rem;">
-                                <img src="./image/couvePrato.png" class="card-img-top" alt="...">
-                                <div class="card-body cardhover">
-                                    <p class="card-text cardhover">couve flor parmegiana</p>
+                            <a href="./Projects/projeto_arroz.html">
+                                <div class="card" style="width: 25rem;">
+                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <div class="card-body cardhover">
+                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                    </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="col d-flex justify-content-center mt-4">
-                            <div class="card" style="width: 27rem;">
-                                <img src="./image/couvePrato.png" class="card-img-top" alt="...">
-                                <div class="card-body cardhover">
-                                    <p class="card-text cardhover">couve flor parmegiana</p>
+                            <a href="./Projects/projeto_arroz.html">
+                                <div class="card" style="width: 25rem;">
+                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <div class="card-body cardhover">
+                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                    </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
-
+                        <div class="col d-flex justify-content-center mt-4">
+                            <a href="./Projects/projeto_arroz.html">
+                                <div class="card" style="width: 25rem;">
+                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <div class="card-body cardhover">
+                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col d-flex justify-content-center mt-4">
+                            <a href="./Projects/projeto_arroz.html">
+                                <div class="card" style="width: 25rem;">
+                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <div class="card-body cardhover">
+                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col d-flex justify-content-center mt-4">
+                            <a href="./Projects/projeto_arroz.html">
+                                <div class="card" style="width: 25rem;">
+                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <div class="card-body cardhover">
+                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col d-flex justify-content-center mt-4">
+                            <a href="./Projects/projeto_arroz.html">
+                                <div class="card" style="width: 25rem;">
+                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <div class="card-body cardhover">
+                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col d-flex justify-content-center mt-4">
+                            <a href="./Projects/projeto_arroz.html">
+                                <div class="card" style="width: 25rem;">
+                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <div class="card-body cardhover">
+                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col d-flex justify-content-center mt-4">
+                            <a href="./Projects/projeto_arroz.html">
+                                <div class="card" style="width: 25rem;">
+                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <div class="card-body cardhover">
+                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col d-flex justify-content-center mt-4">
+                            <a href="./Projects/projeto_arroz.html">
+                                <div class="card" style="width: 25rem;">
+                                    <img src="./image/couvePrato.png" class="card-img-top" alt="...">
+                                    <div class="card-body cardhover">
+                                        <p class="card-text cardhover text-center">couve flor parmegiana</p>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        
                     </div>
                 </div>
             </section>
