--- a/Projects/projeto_couveParmegiana.html
+++ b/Projects/projeto_couveParmegiana.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="shortcut icon" href="../image/logo.png" type="../image/x-icon" />
+    <link rel="shortcut icon" href="../image/Arapoti.png" type="../image/x-icon" />
     <link rel="stylesheet" href="../style/style_arroz.css">
 
 </head>
@@ -18,7 +18,7 @@
 <body>
     <header id="menu">
         <nav id="navbar-example2" class="navbar navbar-dark bgHeader px-3 p-5">
-            <a class="navbar-brand bgHeader" href="#">
+            <a class="navbar-brand bgHeader" href="../index.html">
                 <h4 class="matheusDaCruz">Home</h4>
             </a>
             <ul class="nav nav-pills">
@@ -48,12 +48,13 @@
                 <h1>Matheus</h1>
             </div>
             <!-- Obj -->
+            
             <section id="scrollspyHeading1" class="mt-5">
                 <div class="container text-center ">
 
-                    <img src="../image/th.jpg" class="img-fluid" alt="...">
-                    <h1 class="corForte">Arroz Soltinho</h1>
-                    <h3 class=" corFraca"><span>Como fazer o seu arroz soltinho?</span></h3>
+                    <img src="../image/couvePrato.png" class="img-fluid" alt="...">
+                    <h1 class="corForte">couve flor parmegiana</h1>
+                    <h3 class=" corFraca"><span>Como fazer o sua couve flor parmegiana?</span></h3>
                 </div>
                 <hr>
                 <div class="container text-center text-white">
