--- a/Projects/projeto_couveParmegiana.html
+++ b/Projects/projeto_couveParmegiana.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Arroz</title>
+    <title>couve flor parmegiana</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -32,7 +32,7 @@
                     <a class="nav-link bgHeader" href="#scrollspyHeading3">Dicas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link bgHeader" href="#scrollspyHeading4">Resultado</a>
+                    <a class="nav-link bgHeader" href="#scrollspyHeading4">Vídeo</a>
                 </li>
 
 
@@ -45,16 +45,21 @@
         tabindex="0">
         <main>
             <div class="container p-5">
-                <h1>Matheus</h1>
+                <h1>.....</h1>
             </div>
-            <!-- Obj -->
-            
+            <!-- ingredientes -->
+
             <section id="scrollspyHeading1" class="mt-5">
                 <div class="container text-center ">
 
-                    <img src="../image/couvePrato.png" class="img-fluid" alt="...">
                     <h1 class="corForte">couve flor parmegiana</h1>
                     <h3 class=" corFraca"><span>Como fazer o sua couve flor parmegiana?</span></h3>
+                    <img src="../image/couvePrato.png" class="img-fluid" alt="...">
+                    <br>
+                    <br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt nostrum ratione fuga, accusantium
+                        commodi veniam ipsum? Deleniti perspiciatis ea et repellendus animi nulla rerum sed non
+                        doloribus! Quaerat, reiciendis odio!</p>
                 </div>
                 <hr>
                 <div class="container text-center text-white">
@@ -86,7 +91,7 @@
                             <span class="badge bg-primary rounded-pill">3</span>
                         </li>
                     </ul>
-                   
+                    <br>
                     <p class="corFraca">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla vero omnis culpa
                         impedit excepturi
                         tempore sapiente autem quam earum reprehenderit animi hic ducimus voluptate, ratione minima
@@ -98,7 +103,7 @@
             </section>
 
             <hr>
-            <!-- Problema -->
+            <!-- modo de preparo -->
             <section id="scrollspyHeading2">
                 <div class="container text-center">
                     <h2 class="corForte">Modo de Preparo</h2>
@@ -289,7 +294,7 @@
                 </div>
             </section>
             <hr>
-            <!-- Resolução -->
+            <!-- vídeo -->
             <section id="scrollspyHeading3">
                 <div class="container text-center">
                     <h1 class="corForte">Resolução</h1>
@@ -297,27 +302,6 @@
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                         allowfullscreen></iframe>
-                </div>
-                <div class="container">
-                    <h2 class="corForte">Passo a passo</h2>
-                    <h3 class="corForte">Passo 1</h3>
-                    <p class="fst-normal corFraca">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga
-                        molestiae nemo unde tempora iste
-                        nisi velit, odio aperiam veritatis atque iure, odit officia consectetur dolorem officiis dolores
-                        doloremque eum. Fuga.</p>
-                    <h3 class="corForte">Passo 2</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga molestiae nemo unde tempora iste
-                        nisi velit, odio aperiam veritatis atque iure, odit officia consectetur dolorem officiis dolores
-                        doloremque eum. Fuga.</p>
-                    <h3 class="corForte">Passo 3</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga molestiae nemo unde tempora iste
-                        nisi velit, odio aperiam veritatis atque iure, odit officia consectetur dolorem officiis dolores
-                        doloremque eum. Fuga.</p>
-                    <h3 class="corForte">Passo 4</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga molestiae nemo unde tempora iste
-                        nisi velit, odio aperiam veritatis atque iure, odit officia consectetur dolorem officiis dolores
-                        doloremque eum. Fuga.</p>
-
                 </div>
 
             </section>
@@ -365,8 +349,7 @@
             <!-- Section: Text -->
             <section class="mb-4 bgFooter">
                 <p>
-                    É um prazer te ter aqui, espero que volte novamente! <br> Me siga também nas redes sociais ou
-                    entre em contato comigo!
+                   Entre em contato com a nossa equipe!
                 </p>
             </section>
             <!-- Section: Text -->
@@ -375,7 +358,7 @@
 
 
         <!-- Copyright -->
-        <div class="text-center p-3 bgFooter2">
+        <div class="text-center p-1 bgFooter2">
             © 2023 Copyright:
             <a class="text-white" href="https://github.com/matheus-bdr">matheus-bdr</a>
         </div>
