--- a/Projects/projeto_couveParmegiana.html
+++ b/Projects/projeto_couveParmegiana.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="shortcut icon" href="../image/Arapoti.png" type="../image/x-icon" />
+    <link rel="shortcut icon" href="../image/logo.png" type="../image/x-icon" />
     <link rel="stylesheet" href="../style/style_arroz.css">
 
 </head>
