--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#scrollspyHeading4">Projetos</a>
                 </li>
-
+                <!-- comentário -->
             </ul>
         </nav>
     </header>
